<resources>
    <string name="app_name">AjiniyazQosbayUllı</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Әжинияз Қосыбай улы</string>
    <string name="nav_header_subtitle">Зийўар-таңламалы шығармалары</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_shigarma">Шығармалар</string>
    <string name="menu_omir">Өмир жолы</string>
    <string name="menu_saylandi">Сайландылар</string>
    <string name="card1">МУҲАББАТ ҚОСЫҚЛАРЫ</string>
    <string name="card2">АЙРАЛЫҚ ҲӘМ ЕЛ-ЖУРТ ҲАҚҚЫНДАҒЫ ҚОСЫҚЛАР</string>
    <string name="card3">ХОШЛАСЫЎ ҲӘМ СӘЛЕМНАМАЛАР</string>
    <string name="card4">АҚЫЛ-НӘСИЯТ ҚОСЫҚЛАРЫ</string>
    <string name="card5">ЮМОР-САТИРАЛЫҚ ҚОСЫҚЛАР</string>
    <string name="card6">ПОЭМА</string>
    <string name="card7">АЙТЫСЛАР</string>
</resources>